--- a/flac.html
+++ b/flac.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
- <script src="static/js/libflac4-1.3.2.js"></script>
+ <script src="libflac4-1.3.2.js"></script>
 </head>
 <body>
  <h1>Flac 録音</h1>
